  make it possible to link and distribute the library or modifications
  thereof with other open source programs not licensed under the GPL. 
  However, the exception seemed to be more confusing than clarifying 
  for some and to remove any legal fog around the licensing of libzdb
  it is now GPLv3 only. 
* PostgreSQL: Blob retrieval optimized. 


Version 2.4
-----------
* The options --with_mysql=<path> and --with_postgresql=<path> to
  configure has a new meaning; If <path> is given it is assumed to be
  the full path to respectively mysql_config and to pg_config. Example:
  ./configure --with_mysql=/usr/local/mysql/bin/mysql_config 
  ./configure --with_postgresql=/usr/local/pgsql/bin/pg_config
* From version 2.4, libzdb places its header files into a zdb
  sub-directory as in, <prefix>/include/zdb. Clients must now use the
  include-dir compiler flag, -I<prefix>/include/zdb.
* Internal optimizing changes and improvements
* Changed two prototypes to 'extern void foo(void)' so the library
  compiles without warning if -Wstrict-prototype is used with gcc.
  Thanks to Paul Stevens
Bug fixes:
* Fixed off-by-one bug in Vector_remove
* PostgreSQL: Fixed PostgresqlResultSet_getColumnSize to report correct
  value.
* PostgreSQL: Improved error reporting and fixed potential allocation
  bugs in prepared statements.
* PostgreSQL: Calling PreparedStatement_setString with a NULL value now
  works

Version 2.3
-----------
* Cleaned up API and changed function return type to void for 
  those functions that can throw exception on error. 
* Support variable arguments in Connection_prepareStatement() 
  to make it easy to build prepared statements in-place

Version 2.2.3
-------------
Bug fixes:
* Make sure connection properties, max rows and query timeout are
  reset on Connection_close(), if changed.
* Ensure that timeout is set for new Connections.
* SQLite: Fixed a bug so the SQLite driver now will retry executing